Set visibility on workout create via file
